# Agent-100-Days

./: .env.example  .gitignore  README.md  pyproject.toml
articles/: Agent Skill不是银弹.md  一次Agent项目失利手记.md  从基于AI识别发票说起_一次被误导的技术选型.md  大模型之后是什么？从《哥德尔、巴赫、艾舍尔》看 AI 的下一步.md
week1/: 01.大语言模型到底在干什么.ipynb  01.语言模型到底在干什么.ipynb  02.Token、Embedding 与向量空间.ipynb  02.Token、Embedding与向量空间.ipynb  03.Transformer.ipynb  04.从训练到推理.ipynb  05.概率、随机性与不稳定性.ipynb  06.一次 LLM API 调用，到底发生了什么.ipynb  07.思考 & 补充学习资料.md
week2/: 08.用LLM生成英文学习内容.md  09.前端交互.md  10.多轮对话.md  11.流式生成.md  12.多模态.md  13.深度思考.md  14.思考 & 补充学习资料.md
week2/08_code/: explainer.py  requirements.txt
week2/09_code/: lingua_mate_v1.py  requirements.txt
week2/10_code/: lingua_mate_v2.py
week2/11_code/: lingua_mate_v3.py  stream_example.py
week2/12_code/: lingua_mate_v4.py  requirements.txt
week2/13_code/: lingua_mate_v5.py
week3/: 15.提示词工程的底层逻辑.md  16.Prompt的通用技巧.md  17.零样本提示与少样本提示.md  18.思维链.md  19.结构化输出.md  20.提示词的优化与迭代.md  21.思考 & 补充学习资料.md
week4/: 22.为什么LLM一定需要工具.md  23.工具调用的基本机制.md  24.基于Langchain的工具调用.md  25.MCP介绍.md  26.MCP实战.md  27.从工具到技能.md  28.思考 & 补充学习资料.md
week4/24_code/: tool_example.py
week4/26_code/: travel_server.py
week4/27_code/: agent.py  skill_engine.py
week4/27_code/skills/web-article-summarizer/: SKILL.md
week4/27_code/skills/web-article-summarizer/resources/scripts/: fetch_content.py
week4/27_code/skills/web-article-summarizer/resources/templates/: report_template.md
week5/: 35.思考 & 补充学习资料.md
week6/: 42.思考 & 补充学习资料.md
week7/: 49.思考 & 补充学习资料.md
